// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal should show the action modal when user has logged in with ledger on default step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  />
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <table-invoice-stub
      amount="0"
      gasestimate="0"
      gasprice="2.5e-8"
    />
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <hardware-state-stub
      icon="usb"
    >
      
        Please plug in your Ledger Nano S and open
        the Cosmos app
      
    </hardware-state-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Submit"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on default step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  />
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <table-invoice-stub
      amount="0"
      gasestimate="0"
      gasprice="2.5e-8"
    />
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tm-form-group-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tm-field-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tm-form-group-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Submit"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user hasn't logged in 1`] = `
<div
  class="action-modal"
  name="slide-fade"
>
  <div
    class="action-modal-header"
  >
    <img
      class="icon action-modal-atom"
      src="~assets/images/cosmos-logo.png"
    />
     
    <span
      class="action-modal-title"
    >
      
        Sign in required
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="action-modal-form"
  >
    <p>
      You need to sign in to submit a transaction.
    </p>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tm-form-group-stub
      class="action-modal-group"
    >
      <div>
        <tm-btn-stub
          color="primary"
          value="Sign In"
        />
      </div>
    </tm-form-group-stub>
     
    <!---->
  </div>
</div>
`;
